cambios necesarios para atributos opcionales y obligatorios
